@@ -3473,6 +3473,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Bug fix for auto-install script (user-defined system user variable was only requested / set if a user chose the 'install webserver' option)
 
+-Bug fix for user-initiated chart zoom (reset user-initiated zoom before loading a new time interval chart like 3D / 1W / 1M / etc)
+
 -More RSS feeds to choose from (on News page)
 
 -Misc. optimizations and UX improvements
